add some dnsmasq rules

--- a/etc/sysctl.d/net.conf
+++ b/etc/sysctl.d/net.conf
@@ -13,31 +13,76 @@ net.core.bpf_jit_harden  =  2
 # net.ipv4.tcp_congestion_control
 # 不正确的搭配会导致网络使用体验劣化
 # 如高丢包率等问题
+# pfifo_fast fq codel fq_codel fq_pie sfq
+# 可在内核编译时选择为默认默认队列规则的队列规则
 # pfifo_fast
-# 先进先出队列算法
-# fq
-# cake
+# 默认的队列规则
+# 基于传统的FIFO qdisc
+# 提供了一些基于优先级的处理
+# 有三个优先级
+# 最高优先级的流量(交互式流量)总是会被优先处理
+# 在前一个优先级的队列清空前
+# 后一个优先级的队列不会被处理
+# fq    公平队列
+# 实现相对简单
+# 旨在通过公平地分配带宽来提高网络性能
+# 它确保每个流量都能公平地获得带宽 避免某些流量占用过多资源
+# codel Controlled Delay
+# 旨在通过设置缓冲区中网络数据包的延迟限制来克服网络硬件如路由器中的缓冲膨胀
+# 改善了随机早期检测（RED）算法的整体性能
+# 设计上 CoDel 比 RED 更容易管理和配置
+# fq_codel  公平队列控制延迟
+# 期望更好地流之间分配可用带宽
+# fq_pie    Flow Queuing with Proportional Integral controller Enhanced
+# 将流队列与 PIE AQM 方案相结合的排队规则
+# 为使用 qdisc 的所有流提供公平的带宽份额
+# sfq   随机公平队列
+# 该队列规则试图在任意数量的流之间公平地分配传输数据的机会
+# 它使用Hash函数分离流量
+# 基本没多大用
+# pfifo bfifo noqueue
+# 除去上面的，基本上会有的队列规则
+# FIFO 先进先出
+# pfifo bfifo
+# pfifo Packet limited First In, First Out queue    单位是数据包
+# bfifo Byte limited First In, First Out queue      单位是字节
+# 不会对报文进行整流和重排
+# 仅在接收到报文并在报文入队列后尽快将其发送出去
+# noqueue
+# 不排队
+# 没有调度程序
+# 丢弃所有排队的包
+# 没有速率限制
+# 不对数据包进行分类
+# pie cake
+# 其他一些常见队列规则
+# cake  Common Applications Kept Enhanced
 # 同时使用 AQM 和 FQ 的整形队列规则
 # 会尽量抢占宽带
 # 也会用队列系统帮路由器上的应用分配宽带
 # 适合用在路由器上
-# pie
-# Proportional Integral controller-Enhanced
+# pie   Proportional Integral controller-Enhanced
 # 主要设计目标
 # 低延迟控制
 # 链路利用率高
 # 简单实现
 # 保证稳定性和快速响应
-# fq_pie
-# Flow Queuing with Proportional Integral controller Enhanced
-# 将流队列与 PIE AQM 方案相结合的排队规则
-# 为使用 qdisc 的所有流提供公平的带宽份额
-# codel
-# Controlled Delay
-# 旨在通过设置缓冲区中网络数据包的延迟限制来克服网络硬件如路由器中的缓冲膨胀
-# 改善了随机早期检测（RED）算法的整体性能
-# fq_codel
-# 公平队列控制延迟
+# tbf htb prio multiq netem
+# mq mqprio
+# 别的队列规则
+# TBF   令牌桶过滤器
+# 它会对接口上传输的流量进行整形(支持整流)
+# 可以限制特定接口上出队列的报文的速度
+# HTB   Hierarchical Token Bucket   分层令牌桶
+# 允许用户定义所使用的令牌和桶的特征，并允许用户以任意方式嵌套这些桶
+# 可以以非常精细的方式控制流量
+# PRIO  Priority Scheduler 优先级调度器
+# 实际上不会整形，只会根据设置的过滤器对流量进行分类
+# 可以理解为 pfifo_fast 的升级版
+# 和 sfq 一样没用
+# netem network emulator
+# 可以模拟 网络延迟 丢包 重复 数据包损坏 等网络特征
+# multiq
 # net.core.default_qdisc = fq_codel
 
 # 接收队列的大小
@@ -67,26 +112,22 @@ net.ipv4.ip_forward = 1
 # net.core.default_qdisc
 # 不正确的搭配会导致网络使用体验劣化
 # 如高丢包率等问题
-# 基于延时反馈
-# vegas
-# 难以与其他拥塞算法竞争带宽
+# reno cubic westwood bbr
+# 较为常见
+# reno
+# 基于丢包反馈
+# 带宽利用率不高
+# cubic
+# 基于丢包反馈
+# 一种较为温和的拥塞算法
+# 为 linux 默认拥塞算法
 # westwood
+# 基于延时反馈
 # 根据 ACK 包接收速率来估算可用带宽
 # 不能很好的区分传输过程中的拥塞丢包和无线丢包
 # 适用于无线环境
-# 基于丢包反馈
-# reno
-# 带宽利用率不高
-# bic
-# 适用于rtt较高但丢包极为罕见的情况？
-# cubic
-# 一种较为温和的拥塞算法
-# 为 linux 默认拥塞算法
-# hybla
-# 适用于高延时、高丢包率的网络？
-# h-tcp
-# 低带宽不友好？
 # BBR
+# 基于丢包反馈
 # 与 fq pie fq_pie cake 搭配？
 # BBRv1
 # 并不适合任何网络环境
@@ -128,7 +169,7 @@ net.ipv4.ip_forward = 1
 # 如果内核检测到 ECN 连接行为异常，则回退到非ECN
 # 如果tcp_ecn或路由（或拥塞）ECN 设置被禁用，则不使用该值
 # 默认 1
-# net.ipv4.tcp_ecn_fallback = 1
+net.ipv4.tcp_ecn_fallback = 1
 
 # 启用 TCP Fast Open
 # 1     客户端，允许客户端在 SYN 中携带数据
