--- a/etc/NetworkManager/dnsmasq.d/hijacking.conf
+++ b/etc/NetworkManager/dnsmasq.d/hijacking.conf
@@ -168,7 +168,7 @@ bogus-nxdomain=222.73.156.235
 
 # Malware
 # > Huawei AspiegelBot
-bogus-nxdomain=114.119.160.0/21
+# bogus-nxdomain=114.119.160.0/21
 # > Adobe Flash China Special Edition
 # https://www.zhihu.com/question/281163698/answer/441388130
 address=/flash.cn/
