--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -11,93 +11,112 @@
 
 table inet filter
 delete table inet filter
+# destroy table inet filter
 
 table inet filter {
 	set LANv4 {
 		# 内网地址 ipv4
 		type ipv4_addr
 		flags interval
-		elements = { 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16 }
+		elements = {
+			10.0.0.0/8,
+			172.16.0.0/12,
+			192.168.0.0/16
+		}
 	}
 	set LANv6 {
 		# 内网地址 ipv6
 		type ipv6_addr
 		flags interval
-		elements = { fd00::/8, fe80::/10 }
+		elements = {
+			fd00::/8,
+			fe80::/10
+		}
 	}
-
+	set UNREACHv6 {
+		# 不可达地址 ipv6
+		# from firewalld
+		# icmpv6 addr-unreachable
+		type ipv6_addr
+		flags interval
+		elements = {
+			::/96,
+			::ffff:0.0.0.0/96,
+			2002::/24,
+			2002:a00::/24,
+			2002:7f00::/24,
+			2002:a9fe::/32,
+			2002:ac10::/28,
+			2002:c0a8::/32,
+			2002:e000::/19
+		}
+	}
   	chain input {
+		# 入站
     	type filter hook input priority filter
     	policy drop
-
 		iifname lo accept comment "允许本地环回连接"
+		# ct status dnat accept comment "允许 dnat 连接"
     	ct state {established, related} accept comment "允许已建立的连接"
 		ct state invalid drop comment "丢弃无效连接"
-
-    	# IPv4
 		# ip protocol icmp accept comment "允许 icmp"
 		ip protocol icmp icmp type {
-			echo-reply,					# type 0
-			destination-unreachable,    # type 3
-			echo-request,				# type 8
-			time-exceeded,				# type 11
-			parameter-problem,			# type 12
-		} accept \
-		comment "ICMP"
-
-    	# IPv6
+			echo-reply,  				# type 0
+			destination-unreachable,  	# type 3
+			echo-request,  				# type 8
+			time-exceeded,  			# type 11
+			parameter-problem,  		# type 12
+		} accept comment "接受 ICMP"
 		# meta l4proto ipv6-icmp accept comment "允许 icmp v6"
 		icmpv6 type {
 			destination-unreachable,  	# type 1
-			packet-too-big,				# type 2
-			time-exceeded,				# type 3
-			parameter-problem,			# type 4
-			echo-request,				# type 128
-			echo-reply,					# type 129
-		} accept \
-		comment "基础 IPv6 icmp 功能"
-    	icmpv6 type {
-			nd-router-solicit,			# type 133
-			nd-router-advert,			# type 134
-			nd-neighbor-solicit,		# type 135
-			nd-neighbor-advert,			# type 136
-		} ip6 hoplimit 255 accept \
-		comment "IPv6 SLAAC"
-    	icmpv6 type {
-			mld-listener-query,		# type 130
+			packet-too-big,  			# type 2
+			time-exceeded,  			# type 3
+			parameter-problem,  		# type 4
+			echo-request,  				# type 128
+			echo-reply,  				# type 129
+		} accept comment "接受基础 IPv6 icmp 功能"
+		icmpv6 type {
+			nd-router-solicit,  	# type 133
+			nd-router-advert,  		# type 134
+			nd-neighbor-solicit,  	# type 135
+			nd-neighbor-advert,  	# type 136
+		} ip6 hoplimit 255 accept comment "接受 IPv6 SLAAC"
+		icmpv6 type {
+			mld-listener-query,  	# type 130
 			mld-listener-report,  	# type 131
 			mld-listener-reduction,	# type 132
 			mld2-listener-report,  	# type 143
-		} ip6 saddr fe80::/10 accept \
-		comment "接受来自本地地址的 IPv6 组播侦听发现协议"
-
-    	ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "dhcp v6"
-
-		# 内网服务
-        # 仅接受 TCP&UDP 包
-		meta l4proto {tcp, udp} ip saddr @LANv4 jump lan_service comment "内网地址分流"
-		meta l4proto {tcp, udp} ip6 saddr @LANv6 jump lan_service comment "内网地址分流"
+		} ip6 saddr fe80::/10 accept comment "接受来自本地地址的 IPv6 组播侦听发现协议"
+		ip6 saddr fe80::/10 udp sport 547 udp dport 546 accept comment "允许来自本地地址的 dhcpv6"
+		# pkttype host limit rate 4/second counter jump blocker comment "丢弃速度低于 4/second 的包"
+		meta l4proto {tcp, udp} ip saddr @LANv4 jump lan_service comment "内网地址分流 仅接受 TCP UDP 包"
+		meta l4proto {tcp, udp} ip6 saddr @LANv6 jump lan_service comment "内网地址分流 仅接受 TCP UDP 包"
 		ip saddr @LANv4 jump blocker comment "内网 v4 地址拦截"
 		ip6 saddr @LANv6 jump blocker comment "内网 v6 地址拦截"
-
-		# 公网服务
-		# 仅接受 TCP&UDP 包
-		meta l4proto {tcp, udp} jump web_service comment "网络服务分流"
-    	jump blocker comment "拒绝"
+        meta l4proto {tcp, udp} jump web_service comment "外网地址分流 仅接受 TCP UDP 包"
+		jump blocker comment "拒绝"
   	}
   	chain output {
+		# 出站
     	type filter hook output priority filter
     	policy accept
+    	ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
   	}
   	chain forward {
+		# 转发
     	type filter hook forward priority filter
     	policy drop
+    	ct state {established, related} accept comment "允许已建立的连接"
+		# iifname eno1 oifname eno1 accept comment "允许从 到 的连接"
+		ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
+		reject with icmpx host-unreachable comment "返回 host-unreachable 以拒绝连接"
+		# meta nfproto ipv4 reject with icmp host-unreachable comment "返回 host-unreachable 以拒绝 ipv4 连接"
+		# meta nfproto ipv6 reject with icmpv6 addr-unreachable comment "返回 addr-unreachable 以拒绝 ipv6 连接"
   	}
-
 	chain web_service {
 		# 公网服务
 		# TCP&UDP 规则
-		
 		tcp dport 22 ct state new limit rate 4/minute accept comment "ssh/tcp/22	避免 SSH 暴力破解"
 		tcp dport 80 accept comment "http/tcp/80"
     	th dport 443 accept comment "https/udp&tcp/443"
@@ -109,11 +128,14 @@ table inet filter {
         # tcp dport {6881-6999} accept comment "aria2c BT 动态端口"
         # udp dport {6881-6999} accept comment "aria2c DHT 动态端口"
 	}
-
 	chain lan_service {
 		# 内网服务
 		# TCP&UDP 规则
-
+		# 网络共享
+		# iifname eno1 meta nfproto ipv6 udp dport 547 udp sport 546 accept comment "允许来自 的 dhcpv6 请求"
+		# iifname eno1 meta nfproto ipv4 udp dport 67 udp sport 68 accept comment "允许来自 的 dhcpv6 请求"
+		# iifname eno1 th dport 53 accept comment "允许来自 的 dns 请求"
+		# 应用服务
 		# th dport {1714-1764} accept comment "kde connect 动态端口 udp&tcp 1714-1764"
         # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
         # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
@@ -126,35 +148,37 @@ table inet filter {
 		# th dport 2049 accept comment "nfs3/udp&tcp/2049"
 		# tcp dport {139,445} accept comment "samba/tcp/139,445"
 	}
-
-	# 拦截
   	chain blocker {
-    	# tcp 使用 rst
-		meta l4proto tcp reject with tcp reset
-		# udp 使用 port-unreach
-		meta l4proto udp reject with icmpx port-unreachable
-		# meta nfproto ipv4 meta l4proto udp reject with icmp port-unreachable
-		# meta nfproto ipv6 meta l4proto udp reject with icmpv6 port-unreachable
-		# 剩下的
-		reject with icmpx port-unreachable
-		# meta nfproto ipv4 reject with icmp prot-unreachable
-		# meta nfproto ipv4 reject with icmpv6 port-unreachable
+		# 拦截链
+		meta l4proto tcp reject with tcp reset comment "tcp 使用 tcp reset"
+		meta l4proto udp reject with icmpx port-unreachable comment "udp 使用 port-unreach"
+		# meta nfproto ipv4 meta l4proto udp reject with icmp port-unreachable comment "udp 使用 port-unreach"
+		# meta nfproto ipv6 meta l4proto udp reject with icmpv6 port-unreachable comment "udp 使用 port-unreach"
+		reject with icmpx port-unreachable comment "剩下的"
+		# meta nfproto ipv4 reject with icmp prot-unreachable comment "剩下的"
+		# meta nfproto ipv6 reject with icmpv6 port-unreachable comment "剩下的"
 	}
 }
-
+table inet nat {
+	chain PREROUTING {
+		type nat hook prerouting priority dstnat
+		policy accept
+	}
+	chain POSTROUTING {
+		type nat hook postrouting priority srcnat
+		policy accept
+		# oifname eno1 masquerade comment "源地址伪装"
+	}
+}
 table inet raw {
 	chain PREROUTING {
 		type filter hook prerouting priority raw
 		policy accept
-	
-		# 反向路径过滤
-		# fib saddr . iif oif missing drop
-		# meta nfproto ipv6 fib saddr . iif oif missing drop
-		# 宽松模式
-		# fib saddr . mark oif missing drop
-		# meta nfproto ipv6 fib saddr . mark oif missing drop
-		# 严格模式
-		fib saddr . mark . iif oif missing drop
-		# meta nfproto ipv6 fib saddr . mark . iif oif missing drop
+		# fib saddr . iif oif missing drop comment "反向路径过滤"
+		# meta nfproto ipv6 fib saddr . iif oif missing drop comment "反向路径过滤 ipv6"
+		# fib saddr . mark oif missing drop comment "反向路径过滤 宽松模式"
+		# meta nfproto ipv6 fib saddr . mark oif missing drop comment "反向路径过滤 宽松模式 ipv6"
+		fib saddr . mark . iif oif missing drop comment "反向路径过滤 严格模式"
+		# meta nfproto ipv6 fib saddr . mark . iif oif missing drop comment "反向路径过滤 严格模式 ipv6"
 	}
 }
