--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -13,44 +13,67 @@ table inet filter
 delete table inet filter
 # destroy table inet filter
 
+table inet nat {
+	chain PREROUTING {
+		type nat hook prerouting priority dstnat
+		policy accept
+	}
+	chain POSTROUTING {
+		type nat hook postrouting priority srcnat
+		policy accept
+		# oifname eno1 masquerade comment "源地址伪装"
+	}
+}
 table inet filter {
-	set LANv4 {
-		# 内网地址 ipv4
-		type ipv4_addr
-		flags interval
-		elements = {
-			10.0.0.0/8,
-			172.16.0.0/12,
-			192.168.0.0/16
-		}
+	chain web_service {
+		# 公网服务
+		# TCP&UDP 规则
+		tcp dport 22 ct state new limit rate 4/minute accept comment "ssh/tcp/22	避免 SSH 暴力破解"
+		tcp dport 80 accept comment "http/tcp/80"
+    	th dport 443 accept comment "https/udp&tcp/443"
+		# udp dport 4242 accept comment "nebula/udp/4242"
+		# th dport 4001 accept comment "ipfs 端口 udp&tcp 4001"
+        # tcp dport 4001 accept comment "ipfs tcp 端口"
+        # udp dport 4001 accept comment "ipfs udp 端口"
+		# th dport {6881-6999} accept comment "aria2c 动态端口 udp&tcp 6881-6999"
+        # tcp dport {6881-6999} accept comment "aria2c BT 动态端口"
+        # udp dport {6881-6999} accept comment "aria2c DHT 动态端口"
 	}
-	set LANv6 {
-		# 内网地址 ipv6
-		type ipv6_addr
-		flags interval
-		elements = {
-			fd00::/8,
-			fe80::/10
-		}
+	chain lan_service {
+		# 内网服务
+		# TCP&UDP 规则
+		# 网络共享
+		# iifname eno1 meta nfproto ipv6 udp dport 547 udp sport 546 accept comment "允许来自 的 dhcpv6 请求"
+		# iifname eno1 meta nfproto ipv4 udp dport 67 udp sport 68 accept comment "允许来自 的 dhcpv6 请求"
+		# iifname eno1 th dport 53 accept comment "允许来自 的 dns 请求"
+		# 应用服务
+		# th dport {1714-1764} accept comment "kde connect 动态端口 udp&tcp 1714-1764"
+        # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
+        # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
+        # udp sport 1900 accept comment "uPnP/udp/1900	DLNA requires uPnP"
+        # tcp dport 8200 accept comment "DLNA/tcp/8200"
+        # tcp dport 7250 accept comment "miracast/tcp/7250"
+		# tcp dport 21 accept comment "ftp/tcp/21"
+		# tcp dport 23 accept comment "telnet/tcp/23"
+		# tcp dport 2049 accept comment "nfs/tcp/2049"
+		# th dport 2049 accept comment "nfs3/udp&tcp/2049"
+		# tcp dport {139,445} accept comment "samba/tcp/139,445"
 	}
-	set UNREACHv6 {
-		# 不可达地址 ipv6
-		# from firewalld
-		# icmpv6 addr-unreachable
-		type ipv6_addr
-		flags interval
-		elements = {
-			::/96,
-			::ffff:0.0.0.0/96,
-			2002::/24,
-			2002:a00::/24,
-			2002:7f00::/24,
-			2002:a9fe::/32,
-			2002:ac10::/28,
-			2002:c0a8::/32,
-			2002:e000::/19
-		}
-	}
+	chain output {
+		# 出站
+    	type filter hook output priority filter
+    	policy accept
+    	ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
+  	}
+  	chain forward {
+		# 转发
+    	type filter hook forward priority filter
+    	policy drop
+    	ct state {established, related} accept comment "允许已建立的连接"
+		# iifname eno1 oifname eno1 accept comment "允许从 到 的连接"
+		ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
+		reject with icmpx host-unreachable comment "返回 host-unreachable 以拒绝连接"
+  	}
   	chain input {
 		# 入站
     	type filter hook input priority filter
@@ -97,88 +120,63 @@ table inet filter {
         meta l4proto {tcp, udp} jump web_service comment "外网地址分流 仅接受 TCP UDP 包"
 		jump blocker comment "拒绝"
   	}
-  	chain output {
-		# 出站
-    	type filter hook output priority filter
-    	policy accept
-    	ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
-  	}
-  	chain forward {
-		# 转发
-    	type filter hook forward priority filter
-    	policy drop
-    	ct state {established, related} accept comment "允许已建立的连接"
-		# iifname eno1 oifname eno1 accept comment "允许从 到 的连接"
-		ip6 daddr @UNREACHv6 reject with icmpv6 addr-unreachable comment "copy form firewalld"
-		reject with icmpx host-unreachable comment "返回 host-unreachable 以拒绝连接"
-		# meta nfproto ipv4 reject with icmp host-unreachable comment "返回 host-unreachable 以拒绝 ipv4 连接"
-		# meta nfproto ipv6 reject with icmpv6 addr-unreachable comment "返回 addr-unreachable 以拒绝 ipv6 连接"
-  	}
-	chain web_service {
-		# 公网服务
-		# TCP&UDP 规则
-		tcp dport 22 ct state new limit rate 4/minute accept comment "ssh/tcp/22	避免 SSH 暴力破解"
-		tcp dport 80 accept comment "http/tcp/80"
-    	th dport 443 accept comment "https/udp&tcp/443"
-		# udp dport 4242 accept comment "nebula/udp/4242"
-		# th dport 4001 accept comment "ipfs 端口 udp&tcp 4001"
-        # tcp dport 4001 accept comment "ipfs tcp 端口"
-        # udp dport 4001 accept comment "ipfs udp 端口"
-		# th dport {6881-6999} accept comment "aria2c 动态端口 udp&tcp 6881-6999"
-        # tcp dport {6881-6999} accept comment "aria2c BT 动态端口"
-        # udp dport {6881-6999} accept comment "aria2c DHT 动态端口"
-	}
-	chain lan_service {
-		# 内网服务
-		# TCP&UDP 规则
-		# 网络共享
-		# iifname eno1 meta nfproto ipv6 udp dport 547 udp sport 546 accept comment "允许来自 的 dhcpv6 请求"
-		# iifname eno1 meta nfproto ipv4 udp dport 67 udp sport 68 accept comment "允许来自 的 dhcpv6 请求"
-		# iifname eno1 th dport 53 accept comment "允许来自 的 dns 请求"
-		# 应用服务
-		# th dport {1714-1764} accept comment "kde connect 动态端口 udp&tcp 1714-1764"
-        # tcp dport {1714-1764} accept comment "kde connect tcp 动态端口"
-        # udp dport {1714-1764} accept comment "kde connect udp 动态端口"
-        # udp sport 1900 accept comment "uPnP/udp/1900	DLNA requires uPnP"
-        # tcp dport 8200 accept comment "DLNA/tcp/8200"
-        # tcp dport 7250 accept comment "miracast/tcp/7250"
-		# tcp dport 21 accept comment "ftp/tcp/21"
-		# tcp dport 23 accept comment "telnet/tcp/23"
-		# tcp dport 2049 accept comment "nfs/tcp/2049"
-		# th dport 2049 accept comment "nfs3/udp&tcp/2049"
-		# tcp dport {139,445} accept comment "samba/tcp/139,445"
-	}
   	chain blocker {
 		# 拦截链
-		meta l4proto tcp reject with tcp reset comment "tcp 使用 tcp reset"
-		meta l4proto udp reject with icmpx port-unreachable comment "udp 使用 port-unreach"
-		# meta nfproto ipv4 meta l4proto udp reject with icmp port-unreachable comment "udp 使用 port-unreach"
-		# meta nfproto ipv6 meta l4proto udp reject with icmpv6 port-unreachable comment "udp 使用 port-unreach"
-		reject with icmpx port-unreachable comment "剩下的"
-		# meta nfproto ipv4 reject with icmp prot-unreachable comment "剩下的"
-		# meta nfproto ipv6 reject with icmpv6 port-unreachable comment "剩下的"
+		meta l4proto tcp reject with tcp reset
+		meta l4proto udp reject with icmpx port-unreachable
+		reject with icmpx port-unreachable
 	}
-}
-table inet nat {
-	chain PREROUTING {
-		type nat hook prerouting priority dstnat
-		policy accept
+	set LANv4 {
+		# 内网地址 ipv4
+		type ipv4_addr
+		flags interval
+		elements = {
+			10.0.0.0/8,
+			172.16.0.0/12,
+			192.168.0.0/16
+		}
 	}
-	chain POSTROUTING {
-		type nat hook postrouting priority srcnat
-		policy accept
-		# oifname eno1 masquerade comment "源地址伪装"
+	set LANv6 {
+		# 内网地址 ipv6
+		type ipv6_addr
+		flags interval
+		elements = {
+			fd00::/8,
+			fe80::/10
+		}
+	}
+	set UNREACHv6 {
+		# 不可达地址 ipv6
+		# from firewalld
+		# icmpv6 addr-unreachable
+		type ipv6_addr
+		flags interval
+		elements = {
+			::/96,
+			::ffff:0.0.0.0/96,
+			2002::/24,
+			2002:a00::/24,
+			2002:7f00::/24,
+			2002:a9fe::/32,
+			2002:ac10::/28,
+			2002:c0a8::/32,
+			2002:e000::/19
+		}
 	}
 }
 table inet raw {
 	chain PREROUTING {
 		type filter hook prerouting priority raw
 		policy accept
-		# fib saddr . iif oif missing drop comment "反向路径过滤"
-		# meta nfproto ipv6 fib saddr . iif oif missing drop comment "反向路径过滤 ipv6"
-		# fib saddr . mark oif missing drop comment "反向路径过滤 宽松模式"
-		# meta nfproto ipv6 fib saddr . mark oif missing drop comment "反向路径过滤 宽松模式 ipv6"
-		fib saddr . mark . iif oif missing drop comment "反向路径过滤 严格模式"
-		# meta nfproto ipv6 fib saddr . mark . iif oif missing drop comment "反向路径过滤 严格模式 ipv6"
+		# ct state invalid drop comment "丢弃无效连接"
+		# 配置 ipv6 反向路径过滤
+		# ipv4 使用 sysctl 配置
+		# 已知中国电信手机流量需要
+		# fib saddr . mark oif missing icmpv6 type {
+		# 	nd-router-advert,		# type 134
+		# 	nd-neighbor-solicit		# type 135
+		# } ip6 hoplimit 255 accept comment "接受 IPv6 SLAAC"
+		# meta nfproto ipv6 fib saddr . mark oif missing drop comment "ipv6 宽松反向路径过滤"
+		meta nfproto ipv6 fib saddr . mark . iif oif missing drop comment "ipv6 严格反向路径过滤"
 	}
 }
